crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__chalice_of_the_void_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "SpellCast",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "Counter",
            "target": {
              "type": "ParentTarget"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "Typed",
          "type_filters": [
            "Card"
          ],
          "controller": null,
          "properties": [
            {
              "type": "Cmc",
              "comparator": "EQ",
              "value": {
                "type": "Ref",
                "qty": {
                  "type": "CountersOn",
                  "scope": {
                    "type": "Source"
                  },
                  "counter_type": "charge"
                }
              }
            }
          ]
        },
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "Whenever a player casts a spell with mana value equal to the number of charge counters on ~, counter that spell.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    },
    {
      "PreLoweredReplacement": {
        "event": "Moved",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "PutCounter",
            "counter_type": "charge",
            "count": {
              "type": "Ref",
              "qty": {
                "type": "CostXPaid"
              }
            },
            "target": {
              "type": "SelfRef"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "mode": {
          "type": "Mandatory"
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "description": "~ enters with X charge counters on it.",
        "condition": null
      }
    }
  ],
  "source_text": "This artifact enters with X charge counters on it.\nWhenever a player casts a spell with mana value equal to the number of charge counters on this artifact, counter that spell.",
  "card_name": "Chalice of the Void"
}
