crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__champions_victory_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 844
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Bounce",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": [
            {
              "type": "Attacking"
            }
          ]
        },
        "destination": null
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Return target attacking creature to its owner's hand.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [],
  "castingRestrictions": [
    {
      "type": "DeclareAttackersStep"
    },
    {
      "type": "RequiresCondition",
      "data": {
        "condition": {
          "type": "BeenAttackedThisStep"
        }
      }
    }
  ]
}
