crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__chandra_nalaar_minus_x_loyalty_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Ref",
          "qty": {
            "type": "Variable",
            "name": "X"
          }
        },
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        }
      },
      "cost": {
        "type": "RemoveCounter",
        "count": 4294967295,
        "counter_type": {
          "type": "OfType",
          "data": "loyalty"
        },
        "target": null,
        "selection": "SingleObject"
      },
      "sub_ability": null,
      "duration": null,
      "description": "[−X]: ~ deals X damage to target creature.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
