crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__changeling_outcast_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 46,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Changeling (This card is every creature type.)"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Changeling",
            "description": "Changeling"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 47,
          "end_byte": 82,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "~ can't block and can't be blocked."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "CantBlock",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "~ can't block and can't be blocked."
          },
          "source_text": "~ can't block and can't be blocked.",
          "body_ir": null
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 47,
          "end_byte": 82,
          "precision": "Exact",
          "ordinal_within_span": 1
        },
        "fragment": "~ can't block and can't be blocked."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "CantBeBlocked",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "~ can't block and can't be blocked."
          },
          "source_text": "~ can't block and can't be blocked.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "Changeling (This card is every creature type.)\nThis creature can't block and can't be blocked.",
  "card_name": "Changeling Outcast"
}
