crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__changeling_outcast_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Changeling"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Changeling",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [
    {
      "mode": "CantBlock",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "~ can't block and can't be blocked."
    },
    {
      "mode": "CantBeBlocked",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "~ can't block and can't be blocked."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
